# python-base-flake

./: .envrc  .gitignore  README.md  cookiecutter.json  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  generate-template.sh  generate-template.yml  test.yml
.template/: .ignore  README.md  cookiecutter.json
.template/hooks/: post_gen_project.py  pre_gen_project.py
.template/{{ cookiecutter.project_name }}/: .cruft.json  README.md
.template/{{cookiecutter.project_name}}/: CLAUDE.md  README.md
docs/: conf.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_module.py
{{ cookiecutter.project_name }}/: .cruft.json  .envrc  .gitignore  README.md  flake.nix  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: test.yml
{{ cookiecutter.project_name }}/docs/: conf.py  index.rst
{{ cookiecutter.project_name }}/src/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.project_name }}/tests/: test_module.py
{{cookiecutter.project_name}}/: .gitignore  flake.nix  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  _cli.py
{{cookiecutter.project_name}}/tests/: test_module.py
