[project]
name = "python-base-flake"
version = "0.3.0"
description = "Python base flake using uv2nix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cruft[pyproject]>=2.16.0",
    "mypy>=1.15.0",
    "myst-parser>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
]
