[project]
name = "{{ cookiecutter.project_name }}"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ ]

[project.scripts]
{{ cookiecutter.project_name }} = "{{ cookiecutter.module_name }}._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cruft[pyproject]>=2.16.0",
    "mypy>=1.15.0",
    "myst-parser>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
]

[tool.coverage]
html.directory = "docs/generated/coverage"
report.show_missing = true
run.source_pkgs = [ "{{ cookiecutter.module_name }}" ]
run.branch = true
xml.output = "docs/generated/coverage/coverage.xml"

[tool.cruft]
skip = [ ".git", "tests" ]

[tool.mypy]
check_untyped_defs = true
files = [ "src", "tests" ]
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report xml"
testpaths = [ "tests" ]

[tool.ruff]
line-length = 99
src = [ "src", "tests" ]

[tool.ruff.lint.isort]
combine-as-imports = true
